--- a/BackEnd/MovieWeb.Application/MovieWeb.Application.csproj
+++ b/BackEnd/MovieWeb.Application/MovieWeb.Application.csproj
@@ -10,10 +10,10 @@
     <Folder Include="Common\Actors\Commands\" />
     <Folder Include="Common\Actors\Dtos\" />
     <Folder Include="Common\Actors\Queries\" />
-    <Folder Include="Common\Movies\Commands\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
