added get actors

--- a/BackEnd/MovieWeb.Application/MovieWeb.Application.csproj
+++ b/BackEnd/MovieWeb.Application/MovieWeb.Application.csproj
@@ -8,13 +8,16 @@
 
   <ItemGroup>
     <Folder Include="Common\Actors\Commands\" />
-    <Folder Include="Common\Actors\Queries\" />
     <Folder Include="Common\Movies\Commands\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
