--- a/BackEnd/MovieWeb.Api/MovieWeb.Api.csproj
+++ b/BackEnd/MovieWeb.Api/MovieWeb.Api.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -15,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MovieWeb.Application\MovieWeb.Application.csproj" />
+    <ProjectReference Include="..\MovieWeb.Domain\MovieWeb.Domain.csproj" />
     <ProjectReference Include="..\MovieWeb.Infrastructure\MovieWeb.Infrastructure.csproj" />
   </ItemGroup>
 
